// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeTable when row template not provided uses default row component 1`] = `
<div
  class="table"
>
  <div
    class="row"
  >
    <div
      class="cell"
    >
      
  Name

    </div>
    <div
      class="cell"
    >
      
  Surname

    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="cell"
      >
        
    Ziuta
  
      </div>
      <div
        class="cell"
      >
        
    Kozak
  
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="cell"
      >
        
    Koziolek
  
      </div>
      <div
        class="cell"
      >
        
    Matolek
  
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeTable when row template provided first puts surname and then name 1`] = `
<div
  class="table"
>
  <div
    class="row"
  >
    <div
      class="cell"
    >
      
  Name

    </div>
    <div
      class="cell"
    >
      
  Surname

    </div>
  </div>
   
  <div>
    <div
      class="row tree-row--red"
    >
      <div
        class="cell"
      >
        
    Ziuta
  
      </div>
      <div
        class="cell"
      >
        
    Kozak
  
      </div>
    </div>
    <div
      class="row tree-row--red"
    >
      <div
        class="cell"
      >
        
    Koziolek
  
      </div>
      <div
        class="cell"
      >
        
    Matolek
  
      </div>
    </div>
  </div>
</div>
`;
